Add Dremio UniForm Iceberg integration docs to BI notebook

--- a/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9b7ed21a",
    "metadata": {},
    "source": [
     "# BI & Analytics Integrations\n",
     "\n",
     "**Cel szkoleniowy:** Integracja Databricks Lakehouse z narzedzniami BI i udostepnianie danych uzytkownikom biznesowym\n",
     "\n",
-    "**Zakres tematyczny:**\n- SQL Warehouses: Serverless, Pro, Classic\n- Databricks Genie (AI/BI) - natural language queries\n- Integracje zewnetrzne: Power BI, Dremio\n- Przygotowanie danych dla warstwy BI\n"
+    "**Zakres tematyczny:**\n",
+    "- SQL Warehouses: Serverless, Pro, Classic\n",
+    "- Databricks Genie (AI/BI) - natural language queries\n",
+    "- Integracje zewnetrzne: Power BI, Dremio\n",
+    "- Przygotowanie danych dla warstwy BI\n"
    ]
   },
   {
@@ -216,6 +221,158 @@
     "\n",
     "- **Direct Lake**: Power BI Service -> OneLake/Storage (Parquet). Wymaga Fabric lub odpowiedniej konfiguracji.\n",
     "- **Direct Query**: Power BI -> SQL Warehouse -> Storage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb52ae4",
+   "metadata": {},
+   "source": [
+    "### Dremio - Unity Catalog Iceberg Endpoint\n",
+    "\n",
+    "**Dremio** łączy się z Databricks poprzez **Unity Catalog Iceberg REST Catalog endpoint**. \n",
+    "Wymaga to włączenia **UniForm (Iceberg reads)** na tabelach Delta.\n",
+    "\n",
+    "#### Jak to działa?\n",
+    "\n",
+    "```\n",
+    "Dremio → Unity Catalog (Iceberg REST API) → Delta Table z UniForm → Parquet files\n",
+    "```\n",
+    "\n",
+    "Delta Lake i Iceberg używają tych samych plików Parquet - UniForm generuje tylko dodatkowe metadane Iceberg, bez kopiowania danych.\n",
+    "\n",
+    "#### Wymagania:\n",
+    "1. Tabela zarejestrowana w **Unity Catalog** (managed lub external)\n",
+    "2. **Column mapping** włączony (`delta.columnMapping.mode = 'name'`)\n",
+    "3. **Databricks Runtime 14.3 LTS+** do zapisu\n",
+    "4. Tabela **bez deletion vectors** (lub użyj REORG do ich usunięcia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e4a9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Krok 1: Włączenie UniForm podczas tworzenia nowej tabeli\n",
+    "\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {CATALOG}.{GOLD_SCHEMA}.fact_sales_iceberg\n",
+    "TBLPROPERTIES (\n",
+    "    'delta.columnMapping.mode' = 'name',\n",
+    "    'delta.enableIcebergCompatV2' = 'true',\n",
+    "    'delta.universalFormat.enabledFormats' = 'iceberg'\n",
+    ")\n",
+    "AS SELECT * FROM {CATALOG}.{GOLD_SCHEMA}.fact_sales\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1be4764a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Krok 2: Włączenie UniForm na istniejącej tabeli (ALTER TABLE)\n",
+    "\n",
+    "spark.sql(f\"\"\"\n",
+    "ALTER TABLE {CATALOG}.{GOLD_SCHEMA}.dim_customer SET TBLPROPERTIES (\n",
+    "    'delta.columnMapping.mode' = 'name',\n",
+    "    'delta.enableIcebergCompatV2' = 'true',\n",
+    "    'delta.universalFormat.enabledFormats' = 'iceberg'\n",
+    ")\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c2baeab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Krok 3: Jeśli tabela ma Deletion Vectors - użyj REORG\n",
+    "# REORG usuwa deletion vectors i włącza UniForm w jednym kroku\n",
+    "\n",
+    "# spark.sql(f\"\"\"\n",
+    "# REORG TABLE {CATALOG}.{GOLD_SCHEMA}.fact_sales \n",
+    "# APPLY (UPGRADE UNIFORM(ICEBERG_COMPAT_VERSION=2))\n",
+    "# \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b3c383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Krok 4: Sprawdzenie statusu generowania metadanych Iceberg\n",
+    "\n",
+    "result = spark.sql(f\"DESCRIBE EXTENDED {CATALOG}.{GOLD_SCHEMA}.dim_customer\")\n",
+    "display(result.filter(\"col_name LIKE '%iceberg%' OR col_name LIKE '%uniform%' OR col_name LIKE '%converted%'\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4afdaf26",
+   "metadata": {},
+   "source": [
+    "#### Konfiguracja Dremio - Unity Catalog Iceberg REST\n",
+    "\n",
+    "Dremio łączy się przez **Iceberg REST Catalog API** - **NIE wymaga SQL Warehouse**.\n",
+    "\n",
+    "| Połączenie | SQL Warehouse? | Jak działa |\n",
+    "|------------|----------------|------------|\n",
+    "| Power BI / Tableau (JDBC) | TAK | Zapytania przez SQL Warehouse |\n",
+    "| Dremio / Snowflake / Trino (Iceberg REST) | NIE | Bezpośredni dostęp do plików przez API |\n",
+    "\n",
+    "**Konfiguracja w Dremio:**\n",
+    "\n",
+    "1. **Dodaj źródło** → Iceberg / REST Catalog\n",
+    "2. **Endpoint URI**: \n",
+    "   ```\n",
+    "   https://<workspace-url>/api/2.1/unity-catalog/iceberg-rest\n",
+    "   ```\n",
+    "3. **Warehouse** (= catalog name): `<uc-catalog-name>` np. `main`\n",
+    "4. **Authentication**: Personal Access Token lub OAuth2 (Service Principal)\n",
+    "\n",
+    "Unity Catalog używa **credential vending** - przekazuje tymczasowe credentiale do storage (S3/ADLS), więc Dremio czyta pliki Parquet bezpośrednio.\n",
+    "\n",
+    "#### Ręczna synchronizacja metadanych\n",
+    "\n",
+    "Jeśli Dremio nie widzi najnowszych danych, wymuś synchronizację:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68d9944c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ręczna synchronizacja metadanych Iceberg (jeśli automatyczna nie zadziałała)\n",
+    "# spark.sql(f\"MSCK REPAIR TABLE {CATALOG}.{GOLD_SCHEMA}.dim_customer SYNC METADATA\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d519313b",
+   "metadata": {},
+   "source": [
+    "#### Ograniczenia UniForm dla Dremio\n",
+    "\n",
+    "| Ograniczenie | Opis |\n",
+    "|--------------|------|\n",
+    "| Read-only | Dremio może tylko czytać, nie pisać |\n",
+    "| Deletion Vectors | Muszą być wyłączone (lub użyj REORG) |\n",
+    "| Materialized Views | Nie wspierają UniForm |\n",
+    "| Streaming Tables | Nie wspierają UniForm |\n",
+    "| VOID type | Nie wspierany w Iceberg |\n",
+    "\n",
+    "---"
    ]
   },
   {
