fix: Update FeatureStoreClient to FeatureEngineeringClient in 06_ai_ml_genai_integrations.ipynb

--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "697e5dae",
    "metadata": {},
    "source": [
     "# AI/ML i GenAI Integrations\n",
     "\n",
     "**Cel szkoleniowy:** Zrozumienie mozliwosci AI/ML w Databricks: MLflow, Feature Store, Vector Search i GenAI\n",
     "\n",
-    "**Zakres tematyczny:**\n- MLflow: Tracking, Registry, Model Serving\n- Feature Store: centralne repozytorium cech\n- Vector Search: baza wektorowa dla RAG\n- GenAI: integracja z LLM (DBRX, Llama)\n"
+    "**Zakres tematyczny:**\n",
+    "- MLflow: Tracking, Registry, Model Serving\n",
+    "- Feature Store: centralne repozytorium cech\n",
+    "- Vector Search: baza wektorowa dla RAG\n",
+    "- GenAI: integracja z LLM (DBRX, Llama)\n"
    ]
   },
   {
@@ -46,8 +51,9 @@
     "\n",
     "**Podstawowe pojęcia:**\n",
     "- **MLflow**: Platforma open-source do zarządzania cyklem życia ML (eksperymenty, modele, wdrożenia).\n",
-    "- **Feature Store**: Scentralizowane repozytorium cech, zapewniające spójność między treningiem a inferencją.\n",
-    "- **Vector Search**: Baza danych wektorowych zintegrowana z Delta Lake, kluczowa dla RAG (Retrieval Augmented Generation)."
+    "- **Feature Engineering (Feature Store)**: Scentralizowane repozytorium cech w Unity Catalog, zapewniające spójność między treningiem a inferencją.\n",
+    "- **Vector Search**: Baza danych wektorowych zintegrowana z Delta Lake, kluczowa dla RAG (Retrieval Augmented Generation).\n",
+    "- **Model Serving**: Wdrażanie modeli jako endpointy REST API (w tym Foundation Models jak DBRX, Llama)."
    ]
   },
   {
@@ -89,8 +95,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from databricks import feature_store\n",
-    "from databricks.feature_store import FeatureStoreClient\n",
+    "\n",
+    "# Feature Engineering Client (Unity Catalog - nowy sposób)\n",
+    "from databricks.feature_engineering import FeatureEngineeringClient\n",
     "\n",
     "# Ustawienie katalogu i schematu\n",
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
